--- a/src/pages/insideLobby.html
+++ b/src/pages/insideLobby.html
@@ -10,6 +10,7 @@
     <button onClick="window.location.href = '/'">RESET</button>
     <button id="deleteLobbyButton" onClick="deleteLobby()" style="display: none">Delete Lobby</button>
     <button id="leaveLobbyButton" onClick="leaveLobby()" style="display: none">Leave Lobby</button>
+    <button id="startGameButton" onClick="startGame()" style="display: none">Start Game</button>
     <h1 id="header"></h1>
     <table id="playersTable" style="border-collapse: collapse">
       <thead>
