slowly adding react

--- a/src/pages/insideLobby.html
+++ b/src/pages/insideLobby.html
@@ -11,6 +11,9 @@
     <button id="deleteLobbyButton" onClick="deleteLobby()" style="display: none">Delete Lobby</button>
     <button id="leaveLobbyButton" onClick="leaveLobby()" style="display: none">Leave Lobby</button>
     <button id="startGameButton" onClick="startGame()" style="display: none">Start Game</button>
+    <select name="gameTitle" id="gameTitle">
+      <option value="tictactoe">Tic-Tac-Toe</option>
+    </select>
     <h1 id="header"></h1>
     <table id="playersTable" style="border-collapse: collapse">
       <thead>
