--- a/src/pages/lobbies.html
+++ b/src/pages/lobbies.html
@@ -18,12 +18,11 @@
   <body>
     <h1>Lobbies</h1>
     <button onClick="createLobby()">Create Lobby</button>
-    <button onClick="window.location.href='/'">RESET</button>
-    <button onClick="const player = JSON.parse(localStorage.getItem('player'));
+    <!-- <button onClick="const player = JSON.parse(localStorage.getItem('player'));
     socket.emit('create lobby', {
       name: 'Los Basados',
       host: player,
-    });">BASED</button>
+    });">BASED</button> -->
     <table id="lobbiesTable" style="border-collapse: collapse">
       <thead>
         <tr>
