--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,10 +10,10 @@
       <input id="username" type="text" placeholder="username...">
       <input type="submit" value="Enter">
     </form>
-    <button onClick="socket.emit('create player', { username: 'shikad' });
+    <!-- <button onClick="socket.emit('create player', { username: 'shikad' });
     return false;">SHIKAD</button>
     <button onClick="socket.emit('create player', { username: 'guiso' });
-    return false;">GUISO</button>
+    return false;">GUISO</button> -->
     <script
       src="https://cdn.socket.io/3.1.3/socket.io.min.js"
       integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh"
