--- a/src/pages/lobbies.html
+++ b/src/pages/lobbies.html
@@ -3,41 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <title>Tic tac toe</title>
-    <style>
-      table,
-      td,
-      th {
-        border: 1px solid black;
-      }
-      th { min-width: 20%;}
-      table {
-        border-collapse: collapse;
-      }
-    </style>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   </head>
   <body>
-    <h1>Lobbies</h1>
-    <button onClick="createLobby()">Create Lobby</button>
-    <!-- <button onClick="const player = JSON.parse(localStorage.getItem('player'));
-    socket.emit('create lobby', {
-      name: 'Los Basados',
-      host: player,
-    });">BASED</button> -->
-    <table id="lobbiesTable" style="border-collapse: collapse">
-      <thead>
-        <tr>
-          <th>Lobby Name</th>
-          <th>Players</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody id="lobbiesTableBody"></tbody>
-    </table>
+    <div id="root">
+
+    </div>
     <script
       src="https://cdn.socket.io/3.1.3/socket.io.min.js"
       integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/lobbies.js"></script>
+    <script src="/js/bundle.js"></script>
   </body>
 </html>
