added adventure dice

--- a/src/pages/games/adventuredice.html
+++ b/src/pages/games/adventuredice.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Tic tac toe</title>
+    <title>Adventure Dice</title>
     <style>
+      body {
+        background-image: url("/img/adventuredice/background2.jpg");
+      }
     </style>
   </head>
-  <body style="">
+  <body>
     <div id="root">
     </div>
     <script
